<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mag.cs321app.CreateAccountActivity">


    <RelativeLayout
        android:background="#FFFFFF"
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="520dp">


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/emailField"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="29dp"
            android:text="Your GMU email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="11dp"
            android:text="Password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_below="@+id/emailField"
            android:layout_alignStart="@+id/passwordField" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/emailField"
            android:layout_below="@+id/password"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordField"
            android:layout_below="@+id/passwordField"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="12dp"
            android:text="Re-enter Password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordField"
            android:layout_alignStart="@+id/passwordField"
            android:layout_below="@+id/confirmPassword"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="18dp"
            android:text="First Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_below="@+id/confirmPasswordField"
            android:layout_alignStart="@+id/confirmPasswordField" />

        <EditText
            android:id="@+id/firstnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_alignEnd="@+id/confirmPasswordField"
            android:layout_alignStart="@+id/confirmPasswordField" />

        <TextView
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/firstName"
            android:layout_below="@+id/firstnameField"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="18dp"
            android:text="Last Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/lastnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastname"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_alignEnd="@+id/firstnameField"
            android:layout_alignStart="@+id/firstnameField" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/firstName"
            android:layout_below="@+id/lastnameField"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:text="Gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lastnameField"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif"
            android:text="Submit"
            android:textColor="@color/colorAccent" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_alignStart="@+id/gender"
            android:layout_toStartOf="@+id/submitBtn"
            android:layout_alignEnd="@+id/submitBtn">

            <RadioButton
                android:id="@+id/MaleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:layout_weight="0.18"
                android:text="Male" />


            <RadioButton
                android:id="@+id/FemaleRadio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="200dp"
                android:layout_weight="0.18"
                android:text="Female" />

        </RadioGroup>


    </RelativeLayout>
</ScrollView>
